# orisha

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.orisha/: config.yaml  version_history.json
.specify/memory/: constitution.md
docs/: SYSTEM.md
specs/001-system-doc-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-system-doc-generator/checklists/: requirements.md
specs/001-system-doc-generator/contracts/: cache-api.md  cli.md  explanation-api.md  template.md
src/orisha/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/orisha/analyzers/: __init__.py  ast_parser.py  base.py  config_context.py  dependency.py  entry_points.py  import_graph.py  integrations.py  module_detector.py  registry.py
src/orisha/analyzers/diagrams/: __init__.py  base.py  mermaid.py  terravision.py
src/orisha/analyzers/repomix/: __init__.py  adapter.py
src/orisha/analyzers/sbom/: __init__.py  base.py  syft.py
src/orisha/llm/: __init__.py  client.py  prompts.py
src/orisha/models/: __init__.py  analysis.py  llm_config.py  repository.py
src/orisha/models/canonical/: __init__.py  architecture.py  ast.py  compressed.py  module.py  sbom.py
src/orisha/renderers/: __init__.py  filters.py
src/orisha/templates/: SYSTEM.md.j2  __init__.py  renderer.py
src/orisha/utils/: __init__.py  logging.py  preflight.py  version.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/sample_repos/python_project/: README.md  pyproject.toml
tests/fixtures/sample_repos/python_project/.orisha/: version_history.json
tests/fixtures/sample_repos/python_project/src/sample_project/: __init__.py  app.py  utils.py
tests/fixtures/sample_repos/python_project/tests/: test_app.py
tests/integration/: __init__.py  test_cli.py  test_flow_docs.py  test_full_pipeline.py  test_llm_client.py  test_pipeline_llm.py
tests/unit/: __init__.py  test_ast_parser.py  test_canonical.py  test_config.py  test_config_context.py  test_dependency_parser.py  test_entry_points.py  test_filters.py  test_import_graph.py  test_integrations.py  test_llm_config.py  test_llm_prompts.py  test_mermaid.py  test_models.py  test_module_detector.py  test_pipeline.py  test_preflight_llm.py  test_registry.py  test_renderer.py  test_repomix.py
