[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orisha"
version = "0.1.0"
description = "Automated system documentation generator for Enterprise IT audit, architecture, security and business stakeholders"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Orisha Contributors" }
]
keywords = ["documentation", "audit", "architecture", "sbom", "ci-cd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "typer>=0.9.0",
    "typer-config>=1.4.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.1.0",
    "litellm>=1.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",  # For colored terminal output
    "boto3>=1.42.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# AWS Bedrock LLM provider support
bedrock = [
    "boto3>=1.28.0",
]

[project.scripts]
orisha = "orisha.cli:app"

[project.urls]
Homepage = "https://github.com/orisha/orisha"
Documentation = "https://github.com/orisha/orisha#readme"
Repository = "https://github.com/orisha/orisha"

[tool.hatch.build.targets.wheel]
packages = ["src/orisha"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["orisha"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
norecursedirs = ["tests/fixtures/sample_repos"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
