[project]
name = "sample-python-project"
version = "0.1.0"
description = "A sample Python project for Orisha testing"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
